update i18n doc for .travis.yml

--- a/docs/basics/i18n.md
+++ b/docs/basics/i18n.md
@@ -57,7 +57,7 @@ You can refer to [react-webpack-rails-tutorial](https://github.com/shakacode/rea
   end
   ```
 
-5. In React, you need to initialize `react-intl`, and set parameters for it.
+4. In React, you need to initialize `react-intl`, and set parameters for it.
 
   ```js
   ...
@@ -88,3 +88,5 @@ You can refer to [react-webpack-rails-tutorial](https://github.com/shakacode/rea
     { formatMessage(defaultMessages.yourLocaleKeyInCamelCase) }
   )
   ```
+
+If the test are executed in Travis CI, make sure that `rake` is executed __before__ `npm run build` in `.travis.yml`. `npm run build` depends on `translations.js` & `default.js`, and they are generated or updated by `rake` or `rails server`.
