--- a/docs/basics/i18n.md
+++ b/docs/basics/i18n.md
@@ -27,7 +27,7 @@ You can refer to [react-webpack-rails-tutorial](https://github.com/shakacode/rea
   Optionally you can also set `config.i18n_yml_dir` if you do not what to use all the locale files from rails.
   ```ruby
   # Replace the following line to the location where you keep your client i18n yml files
-  config.i18n_dir = Rails.root.join("PATH_TO", "YOUR_YAML_I18N_FOLDER")
+  config.i18n_yml_dir = Rails.root.join("PATH_TO", "YOUR_YAML_I18N_FOLDER")
   ```
 
   `translations.js`: All your locales in json format.
