--- a/spec/react_on_rails/fixtures/i18n/locales/en.yml
+++ b/spec/react_on_rails/fixtures/i18n/locales/en.yml
@@ -2,3 +2,4 @@ en:
   hello: "Hello world"
   argument: "I am %{age} years old."
   day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
+  blank:
