--- a/spec/react_on_rails/fixtures/i18n/locales/en.yml
+++ b/spec/react_on_rails/fixtures/i18n/locales/en.yml
@@ -3,3 +3,4 @@ en:
   argument: "I am %{age} years old."
   day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
   blank:
+  number: 2
