--- a/spec/react_on_rails/fixtures/i18n/locales/en.yml
+++ b/spec/react_on_rails/fixtures/i18n/locales/en.yml
@@ -4,3 +4,5 @@ en:
   day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
   blank:
   number: 2
+  bool: true
+  float: 2.0
