--- a/docs/basics/i18n.md
+++ b/docs/basics/i18n.md
@@ -71,6 +71,11 @@ You can refer to [react-webpack-rails-tutorial](https://github.com/shakacode/rea
     { formatMessage(defaultMessages.yourLocaleKeyInCamelCase) }
   )
   ```
+
+  # Generate JSON locale files
+
+  In case if you need pure json files, you need to run **`bundle exec rake react_on_rails:locale_json`**.
+  Please, note, you can use only one thing – either generate locales to js or to json. 
   
   # Notes
   
