Add i18n_output_format option

--- a/docs/basics/i18n.md
+++ b/docs/basics/i18n.md
@@ -74,8 +74,10 @@ You can refer to [react-webpack-rails-tutorial](https://github.com/shakacode/rea
 
   # Generate JSON locale files
 
-  In case if you need pure json files, you need to run **`bundle exec rake react_on_rails:locale_json`**.
-  Please, note, you can use only one thing – either generate locales to js or to json. 
+  In case if you need pure json files, you can specify the format as follows in `react_on_rails.rb`:
+  ```rb
+    config.i18n_output_format = 'json'
+  ```
   
   # Notes
   
